--- a/html/_/index.html
+++ b/html/_/index.html
@@ -52,7 +52,7 @@ crossorigin=""/>
       <label class="btn btn-light to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
     </div>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
-    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle" style="color: red;"></i></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle" style="color: red;"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle" style="color: red;"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/newletter.html"><span lang="fr">Newletter</span><span lang="en">Newletter</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
@@ -106,9 +106,9 @@ crossorigin=""/>
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent  </b></span><span lang="en">They support us  </span><!--<i class="fas fa-info-circle notif"></i>--></a>
+    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/supporters.html"><span lang="fr"><b>Ils nous soutiennent  </b></span><span lang="en">They support us  </span><span><i class="fas fa-info-circle" style="color: red;"></i></span></a>
     <br>
-    <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Les nouveautés !</b></span><span lang="en">News from ScenTree !</span><!--<i class="fas fa-info-circle notif"></i>--></a>
+    <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr"><b>Les nouveautés !</b></span><span lang="en">News from ScenTree !</span><span><i class="fas fa-info-circle" style="color: red;"></i></span></a>
   </div>    
 </div>
 
