--- a/html/_/index.html
+++ b/html/_/index.html
@@ -43,7 +43,7 @@ crossorigin=""/>
   </form>
 </div>
 <div class="dropdown pl-1">
-  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </button>
   <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
