--- a/html/_/index.html
+++ b/html/_/index.html
@@ -46,7 +46,7 @@ crossorigin=""/>
   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </button>
-  <div class="dropdown-menu dropdown-menu-right  text-center fas fa-info-circle notifi1" aria-labelledby="dropdownMenuButton-sm">
+  <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-light to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked /><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></label>
       <label class="btn btn-light to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
