--- a/html/_/index.html
+++ b/html/_/index.html
@@ -63,6 +63,7 @@ crossorigin=""/>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
   <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
   </div>
+  <span><i class="fas fa-info-circle notifi1"></i></span>
 </div>
 </nav>
 </header>
