--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -40,7 +40,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center modal-title modal-title1">Les nouveautés de ScenTree</h1>
+  <h1 class="text-center modal-title modal-title1"><span lang="fr">Les nouveautés de ScenTree</span><span lang="en"> News from ScenTree</span></h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
