--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -57,8 +57,8 @@ crossorigin=""/>
   <div class="timeline col-12">
     <ul>
       <li>
-        <div class="content"><
-          <h3 id="heading12"><span lang="fr">15 décembre 2019</span><span lang="en">December 15<sup>th</sup> 2019</span>
+        <div class="content">
+          <h3 id="heading12"><span lang="fr">15 décembre 2019</span><span lang="en">December 15<sup>th</sup>2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
