--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -62,7 +62,7 @@ crossorigin=""/>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
-              Bois de Hô (CAS N°: 8022-91-1)
+              <a href="../ingredients/Ho_Wood_EO__Bois_de_Hô_HE.html"><span lang="en">Ho Wood EO</span><span lang="fr">Bois de Hô HE</span></a>
               <br>Eau de Brout Absolue (CAS N°: 8016-38-4)
               <br>Propionate de linalyl (CAS N°: 144-39-8)
               <br>Lie de Vin Blanche HE (CAS N°: 8016-21-5)
