--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -63,7 +63,7 @@ crossorigin=""/>
           </h3>
           <p>
               <a href="../ingredients/Ho_Wood_EO__Bois_de_Hô_HE.html"><span lang="en">Ho Wood EO (CAS N°: 8022-91-1)</span><span lang="fr">Bois de Hô HE (CAS N°: 8022-91-1)</span></a>
-              <br>Eau de Brout Absolue (CAS N°: 8016-38-4)
+              <br><a href="../ingredients/Eau_de_Brout_Absolute__Eau_de_Brout_Absolue.html"><span lang="en">Eau de Brout Absolute (CAS N°: 8016-38-4)</span><span lang="fr">Eau de Brout Absolue (CAS N°: 8016-38-4)</span></a>
               <br>Propionate de linalyl (CAS N°: 144-39-8)
               <br>Lie de Vin Blanche HE (CAS N°: 8016-21-5)
               <br>Champaca Absolue (CAS N°: 94333-99-0)
