--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -76,13 +76,13 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading12">8 décembre 2019 
-            <br> <span class="ajoutMP">Ajout de 7 nouvelles matières premières</span>
+          <h3 id="heading12"><span lang="fr">8 décembre 2019</span><span lang="en">December 8<sup>th</sup> 2019</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
-              Rhum Brun Absolue (CAS N°: 90604-30-1)
-              <br>Vétiver Haïti HE (CAS N°: 8016-96-4)
-              <br>Nectarol<sup>©</sup> (CAS N°: BASE)
+              <a href="../ingredients/Brown_Rum_Absolute__Rhum_Brun_Absolue.html"><span lang="en">Brown Rum Absolute (CAS N°: 90604-30-1)</span><span lang="fr">Rhum Brun Absolue (CAS N°: 90604-30-1)</span></a>
+              <br><a href="../ingredients/Vetiver_Haiti_EO__Vétiver_Haiti_HE.html"><span lang="en">Vetiver Haiti EO (CAS N°: 8016-96-4)</span><span lang="fr">Vétiver Haiti HE (CAS N°: 8016-96-4)</span></a>
+              <br><a href="../ingredients/Nectarol®__Nectarol®.html"><span lang="en">Nectarol® (CAS N°: BASE)</span><span lang="fr">Nectarol® (CAS N°: BASE)</span></a>
               <br>Amyris HE (CAS N°: 8015-65-4)
               <br>Cacao Absolue (CAS N°: 8002-31-1)
               <br>Jonquille Absolue (CAS N°: 8023-75-4)
