--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -82,11 +82,11 @@ crossorigin=""/>
           <p>
               <a href="../ingredients/Brown_Rum_Absolute__Rhum_Brun_Absolue.html"><span lang="en">Brown Rum Absolute (CAS N°: 90604-30-1)</span><span lang="fr">Rhum Brun Absolue (CAS N°: 90604-30-1)</span></a>
               <br><a href="../ingredients/Vetiver_Haiti_EO__Vétiver_Haiti_HE.html"><span lang="en">Vetiver Haiti EO (CAS N°: 8016-96-4)</span><span lang="fr">Vétiver Haiti HE (CAS N°: 8016-96-4)</span></a>
-              <br><a href="../ingredients/Nectarol®__Nectarol®.html"><span lang="en">Nectarol® (CAS N°: BASE)</span><span lang="fr">Nectarol® (CAS N°: BASE)</span></a>
-              <br>Amyris HE (CAS N°: 8015-65-4)
-              <br>Cacao Absolue (CAS N°: 8002-31-1)
-              <br>Jonquille Absolue (CAS N°: 8023-75-4)
-              <br>Acétate de cinnamyl (CAS N°: 103-54-8)
+              <br><a href="../ingredients/Nectarol®__Nectarol®.html"><span lang="en">Nectarol<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Nectarol<sup>®</sup> (CAS N°: BASE)</span></a>
+              <br><a href="../ingredients/Amyris_EO__Amyris_HE.html"><span lang="en">Amyris EO (CAS N°: 8015-65-4)</span><span lang="fr">Amyris HE (CAS N°: 8015-65-4)</span></a>
+              <br><a href="../ingredients/Cocoa_Absolute__Cacao_Absolue.html"><span lang="en">Cocoa Absolute (CAS N°: 8002-31-1)</span><span lang="fr">Cacao Absolue (CAS N°: 8002-31-1)</span></a>
+              <br><a href="../ingredients/Daffodil_Absolute__Jonquille_Absolue.html"><span lang="en">Daffodil Absolute (CAS N°: 8023-75-4)</span><span lang="fr">Jonquille Absolue (CAS N°: 8023-75-4)</span></a>
+              <br><a href="../ingredients/Cinnamyl_Acetate__Acétate_de_Cinnamyle.html"><span lang="en">Cinnamyl Acetate (CAS N°: 103-54-8)</span><span lang="fr">Acétate de Cinnamyle (CAS N°: 103-54-8)</span></a>
               </p>
         </div>
       </li>
