--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,7 +58,7 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading12"><span lang="fr">15 décembre 2019</span><span lang="en">December 15<sup>th</sup> 2019</span>
+          <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">December 15<sup>th</sup> 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
@@ -92,10 +92,10 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading11">2 et 3 décembre 2019</h3>
+          <h3 id="heading11"><span lang="fr">2 et 3 décembre 2019</span><span lang="en">December 2<sup>nd</sup> and 3<sup>rd</sup> 2019</span>
           <p>
-            Parution d’un article dans la Newsletter de Perfumer & Flavorist
-            <br>Parution d’un article sur le site de <a href="https://www.perfumerflavorist.com/fragrance/application/multiuse/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Perfumer & Flavorist </a> et de <a href="https://www.gcimagazine.com/marketstrends/segments/fragrance/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Global Cosmetic Industry </a>            
+            <span lang="fr">Parution d’un article dans la Newsletter de Perfumer & Flavorist</span><span lang="en">Publication of an article in Perfumer & Flavorist newsletter </span>
+            <br><span lang="fr">Parution d’un article sur le site de </span><span lang="en">Publication of an article on</span><a href="https://www.perfumerflavorist.com/fragrance/application/multiuse/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Perfumer & Flavorist </a> <span lang="fr"> et de </span><span lang="en">and</span><a href="https://www.gcimagazine.com/marketstrends/segments/fragrance/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target ="_BLANK"> Global Cosmetic Industry </a>            
               </p>
         </div>
       </li>
