--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -102,8 +102,8 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading10">1<sup>er</sup> décembre 2019
-            <br> <span class="ajoutMP">Ajout de 7 nouvelles matières premières</span>
+          <h3 id="heading10"><span lang="fr">1<sup>er</sup> décembre 2019</span><span lang="en">December 1<sup>st</sup> 2019</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
           </h3>
           <p>
             Acétate de Phényléthyle (CAS N°: 103-45-7)
