--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,7 +58,7 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">December 15<sup>th</sup> 2019</span>
+          <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">15<sup>th</sup> December 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
@@ -76,7 +76,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading12"><span lang="fr">8 décembre 2019</span><span lang="en">December 8<sup>th</sup> 2019</span>
+          <h3 id="heading12"><span lang="fr">8 décembre 2019</span><span lang="en">8<sup>th</sup> December 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
@@ -92,7 +92,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading11"><span lang="fr">2 et 3 décembre 2019</span><span lang="en">December 2<sup>nd</sup> and 3<sup>rd</sup> 2019</span>
+          <h3 id="heading11"><span lang="fr">2 et 3 décembre 2019</span><span lang="en">2<sup>nd</sup> and 3<sup>rd</sup> December 2019</span>
           </h3>  
           <p>
             <span lang="fr">Parution d’un article dans la Newsletter de Perfumer & Flavorist</span><span lang="en">Publication of an article in Perfumer & Flavorist newsletter </span>
@@ -102,17 +102,17 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading10"><span lang="fr">1<sup>er</sup> décembre 2019</span><span lang="en">December 1<sup>st</sup> 2019</span>
+          <h3 id="heading10"><span lang="fr">1<sup>er</sup> décembre 2019</span><span lang="en">1<sup>st</sup> December 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
           </h3>
           <p>
-            Acétate de Phényléthyle (CAS N°: 103-45-7)
-            <br>Acétate de trans-2-Hexènyle (CAS N°: 2497-18-9)
-            <br>Cis-6-Nonènal (CAS N°: 2277-19-2)
-            <br>Mousse d'arbre Absolue (CAS N°: 90028-67-4)
-            <br>Pin Sylvestre HE (CAS N°: 8023-99-2)
-            <br>Trans-2-Hexènal (CAS N°: 6728-26-3)
-              </p>
+            <a href="../ingredients/Phenyl_Ethyl_Acetate__Acétate_de_Phényléthyle.html"><span lang="en">Phenyl Ethyl Acetate (CAS N°: 103-45-7)</span><span lang="fr">Acétate de Phényléthyle (CAS N°: 103-45-7)</span></a>
+            <br><a href="../ingredients/Trans-2-Hexenyl_Acetate__Acétate_de_trans-2-Hexènyle.html"><span lang="en">Trans-2-Hexenyl Acetate (CAS N°: 2497-18-9)</span><span lang="fr">Acétate de trans-2-Hexènyle (CAS N°: 2497-18-9)</span></a>
+            <br><a href="../ingredients/Cis-6-Nonenal__Cis-6-Nonènal.html"><span lang="en">Cis-6-Nonenal (CAS N°: 2277-19-2)</span><span lang="fr">Cis-6-Nonènal (CAS N°: 2277-19-2)</span></a>
+            <br><a href="../ingredients/Treemoss_Absolute__Mousse_d'arbre_Absolue.html"><span lang="en">Treemoss Absolute (CAS N°: 90028-67-4)</span><span lang="fr">Mousse d'arbre Absolue (CAS N°: 90028-67-4)</span></a>
+            <br><a href="../ingredients/Scots_Pine_EO__Pin_Sylvestre_HE.html"><span lang="en">Scots Pine EO (CAS N°: 8023-99-2)</span><span lang="fr">Pin Sylvestre HE (CAS N°: 8023-99-2)</span></a>
+            <br><a href="../ingredients/Trans-2-Hexenal__Trans-2-Hexènal.html"><span lang="en">Trans-2-Hexenal (CAS N°: 6728-26-3)</span><span lang="fr">Trans-2-Hexènal (CAS N°: 6728-26-3)</span></a>
+          </p>
         </div>
       </li>
       <li>
