--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -157,17 +157,20 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading6">12 novembre 2019
-            <br> <span class="ajoutMP">Ajout de 7 nouvelles matières premières</span>
+          <h3 id="heading6"><span lang="fr">12 novembre 2019</span><span lang="en">12<sup>th</sup> November 2019</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
-            Sureau Absolue (CAS N°: 68916-55-2)
-            <br>Orivone® (CAS N°: 16587-71-6)
-            <br>DihydroEugénol (CAS N°: 2785-87-7)
-            <br>Algénone SP® (CAS N°: BASE)
-            <br>Anther® (CAS N°: 56011-02-0)
-            <br>Folione® (CAS N°: 111-12-6)
-            <br>Diméthyl Octènone (CAS N°: 2550-11-0)
+            <a href="../ingredients/Elderflower_Absolute__Sureau_Absolue.html"><span lang="en">Elderflower Absolute (CAS N°: 68916-55-2)</span><span lang="fr">Sureau Absolue (CAS N°: 68916-55-2)</span></a>
+            <br>Orivone®
+            <a href="../ingredients/Orivone®__Orivone®.html"><span lang="en">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span><span lang="fr">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span></a>
+            <br><a href="../ingredients/DihydroEugenol__DihydroEugénol.html"><span lang="en">DihydroEugenol (CAS N°: 2785-87-7)</span><span lang="fr">DihydroEugénol (CAS N°: 2785-87-7)</span></a>
+            <br>Algénone SP®
+            <a href="../ingredients/Algenone_SP®__Algénone_SP®.html"><span lang="en">Algenone SP<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Algénone SP<sup>®</sup> (CAS N°: BASE)</span></a>
+            <br><a href="../ingredients/Anther®__Anther®.html"><span lang="en">Anther<sup>®</sup> (CAS N°: 56011-02-0)</span><span lang="fr">Anther<sup>®</sup> (CAS N°: 56011-02-0)</span></a>
+            <br><a href="../ingredients/Folione®__Folione®.html"><span lang="en">Folione<sup>®</sup> (CAS N°: 111-12-6)</span><span lang="fr">Folione<sup>®</sup> (CAS N°: 111-12-6)</span></a>
+            <br><a href="../ingredients/Dimethyl_Octenone__Diméthyl_Octènone.html"><span lang="en">Dimethyl Octenone (CAS N°: 2550-11-0)</span><span lang="fr">Diméthyl Octènone (CAS N°: 2550-11-0)</span></a>
+
           </p>
         </div>
       </li>
