--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,7 +58,7 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">15<sup>th</sup> December 2019</span>
+          <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">15<sup>th</sup> december 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
@@ -76,7 +76,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading12"><span lang="fr">8 décembre 2019</span><span lang="en">8<sup>th</sup> December 2019</span>
+          <h3 id="heading12"><span lang="fr">8 décembre 2019</span><span lang="en">8<sup>th</sup> december 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
@@ -92,7 +92,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading11"><span lang="fr">2 et 3 décembre 2019</span><span lang="en">2<sup>nd</sup> and 3<sup>rd</sup> December 2019</span>
+          <h3 id="heading11"><span lang="fr">2 et 3 décembre 2019</span><span lang="en">2<sup>nd</sup> and 3<sup>rd</sup> december 2019</span>
           </h3>  
           <p>
             <span lang="fr">Parution d’un article dans la Newsletter de Perfumer & Flavorist</span><span lang="en">Publication of an article in Perfumer & Flavorist newsletter </span>
@@ -102,7 +102,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading10"><span lang="fr">1<sup>er</sup> décembre 2019</span><span lang="en">1<sup>st</sup> December 2019</span>
+          <h3 id="heading10"><span lang="fr">1<sup>er</sup> décembre 2019</span><span lang="en">1<sup>st</sup> december 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
           </h3>
           <p>
@@ -117,7 +117,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading9"><span lang="fr">24 novembre 2019</span><span lang="en">24<sup>th</sup> November 2019</span>
+          <h3 id="heading9"><span lang="fr">24 novembre 2019</span><span lang="en">24<sup>th</sup> november 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
           </h3>
           <p>
@@ -132,7 +132,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading8"><span lang="fr">17 novembre 2019</span><span lang="en">17<sup>th</sup> November 2019</span>
+          <h3 id="heading8"><span lang="fr">17 novembre 2019</span><span lang="en">17<sup>th</sup> november 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
@@ -148,7 +148,7 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading7"><span lang="fr">13 novembre 2019</span><span lang="en">13<sup>th</sup> November 2019</span>
+          <h3 id="heading7"><span lang="fr">13 novembre 2019</span><span lang="en">13<sup>th</sup> november 2019</span>
           </h3>
           <p>
             <span lang="fr">Conférence donnée à La Place, accueillis par Virginie Roux</span><span lang="en">Conference at La Place, hosted by Virginie Roux</span>
@@ -157,60 +157,61 @@ crossorigin=""/>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading6"><span lang="fr">12 novembre 2019</span><span lang="en">12<sup>th</sup> November 2019</span>
+          <h3 id="heading6"><span lang="fr">12 novembre 2019</span><span lang="en">12<sup>th</sup> november 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
           <p>
             <a href="../ingredients/Elderflower_Absolute__Sureau_Absolue.html"><span lang="en">Elderflower Absolute (CAS N°: 68916-55-2)</span><span lang="fr">Sureau Absolue (CAS N°: 68916-55-2)</span></a>
-            <br>Orivone®
-            <a href="../ingredients/Orivone®__Orivone®.html"><span lang="en">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span><span lang="fr">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span></a>
+            <br><a href="../ingredients/Orivone®__Orivone®.html"><span lang="en">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span><span lang="fr">Orivone<sup>®</sup> (CAS N°: 16587-71-6)</span></a>
             <br><a href="../ingredients/DihydroEugenol__DihydroEugénol.html"><span lang="en">DihydroEugenol (CAS N°: 2785-87-7)</span><span lang="fr">DihydroEugénol (CAS N°: 2785-87-7)</span></a>
-            <br>Algénone SP®
-            <a href="../ingredients/Algenone_SP®__Algénone_SP®.html"><span lang="en">Algenone SP<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Algénone SP<sup>®</sup> (CAS N°: BASE)</span></a>
+            <br><a href="../ingredients/Algenone_SP®__Algénone_SP®.html"><span lang="en">Algenone SP<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Algénone SP<sup>®</sup> (CAS N°: BASE)</span></a>
             <br><a href="../ingredients/Anther®__Anther®.html"><span lang="en">Anther<sup>®</sup> (CAS N°: 56011-02-0)</span><span lang="fr">Anther<sup>®</sup> (CAS N°: 56011-02-0)</span></a>
             <br><a href="../ingredients/Folione®__Folione®.html"><span lang="en">Folione<sup>®</sup> (CAS N°: 111-12-6)</span><span lang="fr">Folione<sup>®</sup> (CAS N°: 111-12-6)</span></a>
             <br><a href="../ingredients/Dimethyl_Octenone__Diméthyl_Octènone.html"><span lang="en">Dimethyl Octenone (CAS N°: 2550-11-0)</span><span lang="fr">Diméthyl Octènone (CAS N°: 2550-11-0)</span></a>
-
           </p>
         </div>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading5">11 novembre 2019</h3>
+          <h3 id="heading5"><span lang="fr">11 novembre 2019</span><span lang="en">11<sup>th</sup> november 2019</span>
+          </h3>
           <p>
-            ScenTree parait intégralement traduit en anglais
+            <span lang="fr">ScenTree parait intégralement traduit en anglais</span> <span lang="en">Launching of an English version of ScenTree</span>
           </p>
         </div>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading4">23 octobre 2019</h3>
+          <h3 id="heading4"><span lang="fr">23 octobre 2019</span><span lang="en">23<sup>rd</sup> october 2019</span>
+          </h3>
           <p>
-            Accord de l’IFRA pour la publication des normes du même nom. 
+            <span lang="fr">Accord de l’IFRA pour la publication des normes du même nom. </span> <span lang="en">Agreement with the IFRA for the displaying of their standards</span>
           </p>
         </div>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading3">21 octobre 2019</h3>
+          <h3 id="heading3"><span lang="fr">21 octobre 2019</span><span lang="en">21<sup>st</sup> october 2019</span>
+          </h3>
           <p>
-            Signature de notre premier contrat avec <a href="https://www.cinquiemesens.com/coworking/" target ="_BLANK">Cinquième Sens Co-Working</a> 
+            <span lang="fr">Signature de notre premier contrat avec </span>Signature of our first deal, with <a href="https://www.cinquiemesens.com/coworking/" target ="_BLANK">Cinquième Sens Co-Working</a> 
           </p>
         </div>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading2">22 septembre 2019</h3>
+          <h3 id="heading2"><span lang="fr">22 septembre 2019</span><span lang="en">22<sup>nd</sup> september 2019</span>
+          </h3>
           <p>
-            Parution d’un article sur le <a href="http://espritdeparfum.com/scentree-plateforme-dinformations-sur-les-matieres-premieres/" target ="_BLANK">blog </a>de Sylvaine Delacourte
+            <span lang="fr">Parution d’un article sur le <a href="http://espritdeparfum.com/scentree-plateforme-dinformations-sur-les-matieres-premieres/" target ="_BLANK">blog </a>de Sylvaine Delacourte</span><span lang="en">Publication of an <a href="http://espritdeparfum.com/scentree-plateforme-dinformations-sur-les-matieres-premieres/" target ="_BLANK">article </a>on Sylvaine Delacourte blog</span>
           </p>
         </div>
       </li>
       <li>
         <div class="content">
-          <h3 id="heading1">22 septembre 2019
-            <br><b>Lancement de ScenTree au grand public
-            <br><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target ="_BLANK">Participation</a> de la revue Nez</b>
+          <h3 id="heading1"><span lang="fr">22 septembre 2019</span><span lang="en">22<sup>nd</sup> september 2019</span></h3>
+            <span lang="fr">Lancement de ScenTree au grand public</span><span lang="en">Launching of ScenTree</span>
+            <br><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target ="_BLANK">Participation</a><span lang="fr"> de Nez, la revue olfactive</span><span lang="en">of Nez, la revue olfactive</span></b>
           </h3>
         </div>
       </li>
