--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -62,14 +62,14 @@ crossorigin=""/>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
           <p>
-              <a href="../ingredients/Ho_Wood_EO__Bois_de_Hô_HE.html"><span lang="en">Ho Wood EO (CAS N°: 8022-91-1)</span><span lang="fr">Bois de Hô HE (CAS N°: 8022-91-1)</span></a>
-              <br><a href="../ingredients/Eau_de_Brout_Absolute__Eau_de_Brout_Absolue.html"><span lang="en">Eau de Brout Absolute (CAS N°: 8016-38-4)</span><span lang="fr">Eau de Brout Absolue (CAS N°: 8016-38-4)</span></a>
-              <br><a href="../ingredients/Linalyl_Propionate__Propionate_de_Linalyle.html"><span lang="en">Linalyl Propionate (CAS N°: 144-39-8)</span><span lang="fr">Propionate de Linalyle (CAS N°: 144-39-8)</span></a>
-              <br><a href="../ingredients/White_Wine_Lees_EO__Lie_de_Vin_Blanche_HE.html"><span lang="en">White Wine Lees EO (CAS N°: 8016-21-5)</span><span lang="fr">Lie de Vin Blanche HE (CAS N°: 8016-21-5)</span></a>
-              <br><a href="../ingredients/Champaca_Absolute__Champaca_Absolue.html"><span lang="en">Champaca Absolute (CAS N°: 94333-99-0)</span><span lang="fr">Champaca Absolue (CAS N°: 94333-99-0)</span></a>
-              <br><a href="../ingredients/Wintergreen_EO__Gaulthérie_Couchée_HE.html"><span lang="en">Wintergreen EO (CAS N°: 90045-28-6)</span><span lang="fr">Gaulthérie Couchée HE (CAS N°: 90045-28-6)</span></a>
-              <br><a href="../ingredients/Methyl_Salicylate__Salicylate_de_Méthyle.html"><span lang="en">Methyl Salicylate (CAS N°: 119-36-8)</span><span lang="fr">Salicylate de Méthyle (CAS N°: 119-36-8)</span></a>
-              <br><a href="../ingredients/Scots_Pine_Absolute__Pin_Sylvestre_Absolue.html"><span lang="en">Scots Pine Absolute (CAS N°: 8023-99-2)</span><span lang="fr">Pin Sylvestre Absolue (CAS N°: 8023-99-2)</span></a>
+              <a class="interpop" href="../ingredients/Ho_Wood_EO__Bois_de_Hô_HE.html"><span lang="en">Ho Wood EO (CAS N°: 8022-91-1)</span><span lang="fr">Bois de Hô HE (CAS N°: 8022-91-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Eau_de_Brout_Absolute__Eau_de_Brout_Absolue.html"><span lang="en">Eau de Brout Absolute (CAS N°: 8016-38-4)</span><span lang="fr">Eau de Brout Absolue (CAS N°: 8016-38-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Linalyl_Propionate__Propionate_de_Linalyle.html"><span lang="en">Linalyl Propionate (CAS N°: 144-39-8)</span><span lang="fr">Propionate de Linalyle (CAS N°: 144-39-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/White_Wine_Lees_EO__Lie_de_Vin_Blanche_HE.html"><span lang="en">White Wine Lees EO (CAS N°: 8016-21-5)</span><span lang="fr">Lie de Vin Blanche HE (CAS N°: 8016-21-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Champaca_Absolute__Champaca_Absolue.html"><span lang="en">Champaca Absolute (CAS N°: 94333-99-0)</span><span lang="fr">Champaca Absolue (CAS N°: 94333-99-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Wintergreen_EO__Gaulthérie_Couchée_HE.html"><span lang="en">Wintergreen EO (CAS N°: 90045-28-6)</span><span lang="fr">Gaulthérie Couchée HE (CAS N°: 90045-28-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Methyl_Salicylate__Salicylate_de_Méthyle.html"><span lang="en">Methyl Salicylate (CAS N°: 119-36-8)</span><span lang="fr">Salicylate de Méthyle (CAS N°: 119-36-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Scots_Pine_Absolute__Pin_Sylvestre_Absolue.html"><span lang="en">Scots Pine Absolute (CAS N°: 8023-99-2)</span><span lang="fr">Pin Sylvestre Absolue (CAS N°: 8023-99-2)</span></a>
           </p>
           <p><span lang="fr"> Arrivée des liaisons entre les fiches d'identité des ingrédients.</span><span lang="en">Launching of inter-windows links</span> </p>
         </div>
