--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Classification innovante des ingrédients parfum</title>
-<title lang="en">ScenTree - The new collaborative perfumery raw materials classification</title>
+<title lang="fr">ScenTree - They Support Us_Ils nous soutiennent</title>
+<title lang="en">ScenTree - They Support Us_Ils nous soutiennent</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -72,14 +72,21 @@ crossorigin=""/>
   <uL>
     <li>ASTORRI Marc<i class="profession"><span lang="fr"> (Apprenti Parfumeur)</span><span lang="en"> (Ex-Perfumer Apprentice)</span></i></li>
     <li>CERVI Yohan<i class="profession"><span lang="fr"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en"> (Director of Creation at MAELSTROM Parfumeurs)</span></i></li>
+    <li>DECOLIN Clémence<i class="profession"><span lang="fr"> (Evaluatrice Fine Fragrance)</span><span lang="en"> (Fine Fragrance Evaluator)</span></i></li>
     <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
     <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
     <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
-     <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
-    <li>MORVAN Axel<i class="profession"><span lang="fr">(Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
+
+    <li>FRACHON Axelle<i class="profession"><span lang="fr"> </span><span lang="en"> </span></i></li>
+
+    <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
+    <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
+    <li>NORMAND Sophie<i class="profession"><span lang="fr"> (Rédactrice - formatrice parfums)</span><span lang="en"> (Writer - Trainer Perfumes)</span></i></li>
+    <li>OROFINO Delphine<i class="profession"><span lang="fr"> (Marketing et Communication de la Parfumerie et des Cosmétiques)</span><span lang="en"> (Marketing and communication of perfumes and cosmetics)</span></i></li>
     <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
     <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
     <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
+    <li style="color: brown;">TAMEN Jeremy<i class="profession"><span lang="fr"> (Formateur expert dans les Fragrances du thé)</span><span lang="en"> (Trainer - Tea fragrances expert)</span></i></li>
     <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
   </uL>
 
