--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -82,7 +82,7 @@ crossorigin=""/>
     <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
     <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
     <li>NORMAND Sophie<i class="profession"><span lang="fr"> (Rédactrice - formatrice parfums)</span><span lang="en"> (Writer - Trainer Perfumes)</span></i></li>
-    <li>OROFINO Delphine<i class="profession"><span lang="fr"> (Marketing et Communication de la Parfumerie et des Cosmétiques)</span><span lang="en"> (Marketing and communication of perfumes and cosmetics)</span></i></li>
+    <li>OROFINO Delphine<i class="profession"><span lang="fr"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en"> (Marketing of perfumes and cosmetics)</span></i></li>
     <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
     <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
     <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
