--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -86,7 +86,7 @@ crossorigin=""/>
     <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
     <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
     <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
-    <li style="color: brown;">TAMEN Jeremy<i class="profession"><span lang="fr"> (Formateur expert dans les Fragrances du thé)</span><span lang="en"> (Trainer - Tea fragrances expert)</span></i></li>
+    <li style="font-weight: bold;">TAMEN Jeremy<i class="profession"><span lang="fr"> (Formateur expert dans les Fragrances du thé)</span><span lang="en"> (Trainer - Tea fragrances expert)</span></i></li>
     <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
   </uL>
 
